fix layout-shift in landing

--- a/src/components/home/header.module.css
+++ b/src/components/home/header.module.css
@@ -11,7 +11,6 @@
 .hero {
   position: relative;
   width: 100%;
-  height: 100%;
   max-width: 1366px;
   padding-left: 120px;
   padding-right: 120px;
@@ -152,8 +151,14 @@
   }
 }
 .img {
-  width: 35vw;
+  /* width: 35vw;
+  max-width: 500px; */
+  display: block;
+  width: 100%;
+  height: auto;
   max-width: 500px;
+  aspect-ratio: 1 / 1; /* o directamente 500 / 700 */
+  object-fit: cover;
 }
 
 @media only screen and (max-width: 900px) {
